# bb-stock-watcher

./: Cargo.toml  env-sample
src/: main.rs
